--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -137,11 +137,13 @@
                             <i class="bi bi-arrow-left-right"></i>端口转发
                         </a>
                     </li>
+                    {% if config.SOCKETIO_AVAILABLE %}
                     <li class="nav-item">
                         <a class="nav-link {% if request.path == '/terminal' %}active{% endif %}" href="/terminal">
                             <i class="bi bi-terminal"></i>Web 终端
                         </a>
                     </li>
+                    {% endif %}
 
                     <li class="nav-item mt-3">
                         <a class="nav-link text-danger" href="/logout">
